--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ingenieria de negocios: soluciones e innovaciones empresariales.</title>
+        <title>Ingenieria de Negocios: soluciones e innovaciones empresariales.</title>
         <link rel="stylesheet" href="/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-2/css/all.min.css">
     </head>
@@ -30,7 +30,7 @@
 
         <div class="quien_soy">
             <h3><b>Douglas Contreras, Ing.</b></h3>
-            <p>Me llamo Douglas José González Contreras,soy ingeniero de Negocios en proceso, amante de la naturaleza, el diseño y la tecnología, 
+            <p>Me llamo Douglas José González Contreras,soy Ingeniero de Negocios, amante de la naturaleza, el diseño y la tecnología, 
                 actualmente me encuentro completando mis estudios en la Escuela Superior de Economía y Negocios (ESEN).
             </p>
                 <button><a href="/info.html">Continuar leyendo... </a></button>
@@ -39,9 +39,9 @@
         <br>
         <div class="Servicios">
             <h3><b>Servicios y Experiencia </b></h3>
-            <p> Como ingeniero de negocios, mi compromiso es abordar los desafíos presentes en las organizaciones de hoy en día, para generar <br>un 
+            <p> Como Ingeniero de Negocios, mi compromiso es abordar los desafíos presentes en las organizaciones, para generar <br>un 
                 cambio positivo dentro de cada institución con el cual podamos innovar y ofrecer mejores soluciones a los requerimientos<br> actuales del mercado.
-                 Es así, que, a través de la innovación, el diseño y la constante búsqueda de la mejora continua podemos desarrollar las mejoras necesarias que 
+                 Es así, que, a través de la innovación, el diseño y la constante búsqueda de la excelencia podemos desarrollar las mejoras necesarias que 
                  nos permitan alcanzar los maximos estandares de calidad.
 
                  <button><a href="/about.html">Continuar leyendo</a></button>
