--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ingenieria de negocios: soluciones e innovaciones empresariales.</title>
+        <title>Ingenieria de Negocios: soluciones e innovaciones empresariales.</title>
         <link rel="stylesheet" href="/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-2/css/all.min.css">
     </head>
@@ -27,7 +27,7 @@
         <section class="informacion1">
             <h2>Formación Académica</h2>
             <ol>
-                <li type="circle">Ingeniería en Negocios, Escuela Superior de economia y Negocios, Santa Tecla.<br>
+                <li type="circle">Ingeniería en Negocios, Escuela Superior de Economia y Negocios, Santa Tecla.<br>
                     <small>Enero 2020- Presente</small>
                 <li type="circle">Escuela de idiomas, Universidad Centromaericana José Simeón Cañas, San Salvador.<br>
                     <small>Marzo 2018-Noviembre 2018</small>
@@ -42,7 +42,7 @@
         <section class="informacion">
             <h2>Experiencia</h2>
             <ul>
-                <li type="disc">Realizacion manual de seguridad para Livsmart, Lourdes. <br>
+                <li type="disc">Realización manual de seguridad para Livsmart, Lourdes. <br>
                     <small>Agosto 2021-Noviembre 2021</small></li>
                 <li type="disc">Pasantía clasificacion de medicamentos, área de farmacia,Hospital General del ISSS,San Salvador. <br>
                     <small>septiembre 2019-Noviembre 2019</small></li>
@@ -59,16 +59,16 @@
 
        <section class="informacion3">
            <h2><u>Más sobre mí:</u></h2>
-           <p>Me llamo Douglas José González Contreras,soy ingeniero de Negocios en proceso, amante de la naturaleza, el diseño y la tecnología, <br>
+           <p>Me llamo Douglas José González Contreras,soy Ingeniero de Negocios, amante de la naturaleza, el diseño y la tecnología, 
             actualmente me encuentro completando mis estudios en la Escuela Superior de Economía y Negocios (ESEN). Siempre me he considerado una persona <br>
-            apasionada y entregada, que desea generar un cambio positivo en nuestra sociedad a traves del trabajo honesto. </p>
+            apasionada y entregada, que desea generar un cambio positivo en nuestra sociedad a través del trabajo honesto. </p>
        </section>
 
        <section class="intereses">
            <h2><u>Intereses y pasatiempos:</u></h2>
            <ul>
                <li type="none">Fotografía.</li>
-               <li type="none">Viajar.</li>
+               <li type="none">Conocer nuevos lugares.</li>
                <li type="none">Deportes (Fútbol americano, basketball)</li>
                <li type="none">Desarrollo sustentable.</li>
 
