--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ingenieria de negocios: soluciones e innovaciones empresariales.</title>
+        <title>Ingenieria de Negocios: soluciones e innovaciones empresariales.</title>
         <link rel="stylesheet" href="/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-2/css/all.min.css">
     </head>
@@ -25,9 +25,9 @@
 
         <section class="Texto1">
             <h2><u>Compromiso</u></h2>
-            <p> Como ingeniero de negocios, mi compromiso es abordar los desafíos presentes en las organizaciones de hoy en día, para generar un <br>
-                cambio positivo dentro de cada institución con el cual podamos innovar y ofrecer mejores soluciones a los requerimientos actuales del mercado.<br>
-                 Es así, que, a través de la innovación, el diseño y la constante búsqueda de la mejora continua podemos desarrollar las mejoras necesarias que <br>
+            <p> Como Ingeniero de Negocios, mi compromiso es abordar los desafíos presentes en las organizaciones, para generar <br>un 
+                cambio positivo dentro de cada institución con el cual podamos innovar y ofrecer mejores soluciones a los requerimientos<br> actuales del mercado.
+                 Es así, que, a través de la innovación, el diseño y la constante búsqueda de la excelencia podemos desarrollar las mejoras necesarias que 
                  nos permitan alcanzar los maximos estandares de calidad.</p>
 
         </section>
@@ -45,11 +45,19 @@
             </div>
         </div>
 
-        <div class="Servicios">
+        <div class="Servicios_1">
             <h3><b>Trabajos realizados</b></h3>
             <div class="lista_t">
                 <ul>
-                    <li type="disc"
+                    <li type="square"> Desarrollo de diagramas de flujo para Livsmart: Trabajo realizado para la materia de Ingeniería <br>
+                    de Procesos; en el cual realizamos la recopilación de datos, con el fin de generar una representación gráfica<br> de las actividades
+                    realizadas en el área de seguridad industrial de Livsmart. </li>
+                    <li type="square"> Proyecto de concientización ambiental "Manitas verdes": Actividad realizada en el marco del "Campamento Verde", organizado
+                    por el MARN con el fin de incentivar la participación y concientización de los estudiantes en temas medioambientales.</li>
+                    <li type="square"> Propuesta de mejora para el restaurante del Club Salvadoreño: Actividad realizada para la materia
+                        de Diseño de Servicios, la cual tenia el proposito de encontrar oportunidades de mejora en el sector de restaurante del Club Salvadoreño, sucursal El Sunzal
+                        con el fin de solucionar las dolencias actuales de los usuarios.
+                    </li>
                 </ul>
             </div>
         </div>
