--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ingenieria de negocios: soluciones e innovaciones empresariales.</title>
+        <title>Ingenieria de Negocios: soluciones e innovaciones empresariales.</title>
         <link rel="stylesheet" href="/estilos.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-2/css/all.min.css">
     </head>
