--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <p> Como Ingeniero de Negocios, mi compromiso es abordar los desafíos presentes en las organizaciones, para generar <br>un 
                 cambio positivo dentro de cada institución con el cual podamos innovar y ofrecer mejores soluciones a los requerimientos<br> actuales del mercado.
                  Es así, que, a través de la innovación, el diseño y la constante búsqueda de la excelencia podemos desarrollar las mejoras necesarias que 
-                 nos permitan alcanzar los maximos estandares de calidad.</p>
+                 nos permitan alcanzar los máximos estandares de calidad.</p>
 
         </section>
 
