--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
             <ol>
                 <li type="circle">Ingeniería en Negocios, Escuela Superior de Economia y Negocios, Santa Tecla.<br>
                     <small>Enero 2020- Presente</small>
-                <li type="circle">Escuela de idiomas, Universidad Centromaericana José Simeón Cañas, San Salvador.<br>
+                <li type="circle">Escuela de idiomas, Universidad Centroamericana José Simeón Cañas, San Salvador.<br>
                     <small>Marzo 2018-Noviembre 2018</small>
                 <li type="circle">Secundaria, Colegio Externado de San José, San Salvador.<br>
                     <small>Febrero 2014-Noviembre 2019</small>
@@ -45,7 +45,7 @@
                 <li type="disc">Realización manual de seguridad para Livsmart, Lourdes. <br>
                     <small>Agosto 2021-Noviembre 2021</small></li>
                 <li type="disc">Pasantía clasificacion de medicamentos, área de farmacia,Hospital General del ISSS,San Salvador. <br>
-                    <small>septiembre 2019-Noviembre 2019</small></li>
+                    <small>Septiembre 2019-Noviembre 2019</small></li>
                 <li type="disc">Miembro de Crece ESEN en el área de finanzas, Crece ESEN, Santa Tecla. <br>
                     <small>Octubre 2020-Presente</small></li>
                 <li type="disc">Miembro de Techo ESEN en el área de finanzas,Techo ESEN, Santa Tecla. <br>
